# mizu

./: configure  meson.build
po/: LINGUAS  POTFILES  en-GB.po  it.lichtzeit.mizu.pot  it.po  meson.build
src/: app.vala  desktop_application.vala  helpers.vala  launcher.vala  meson.build  query.vala  utils.vala.in
src/widgets/: apps_list.vala  avatar.vala  power_menu.vala
